:bug: fix: hide horizontal scroll in container and split-container
- I added 'overflow-x: hidden' in the container and split-container components to address the horizontal scroll issue in the About component caused by animation

--- a/src/styles/component.css
+++ b/src/styles/component.css
@@ -5,6 +5,7 @@
   background: var(--background-color);
   gap: 2.5em;
   padding-top: 30px;
+  overflow-x: hidden;
 }
 
 .split-component-container {
